added frontend datas

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <meta name="description" content="IND STOCKS - Practice crypto trading with $10,000 virtual capital. Real-time market data, professional charts, and risk-free learning." />
+    <title>IND STOCKS - Paper Trading Platform</title>
   </head>
   <body>
     <div id="root"></div>
